# Tello

./: .gitignore  CMakeLists.txt  Doxyfile  Fremlæggelse.md  Plan.md  README.md  Tello_API.cpp  Tello_Telemetry.cpp  Tello_Telemetry.h  Tello_Terminal.cpp  Tello_Terminal.h  Tello_UDP.cpp  Tello_UDP.h  Tello_UI.cpp  Tello_UI.h  Tello_Video.cpp  Tello_Video.h  main.cpp  tello_API.h
cmake/: automate-vcpkg.cmake
libs/: CMakeLists.txt
libs/ImTerm/: CMakeLists.txt
libs/ImTerm/include/imterm/: misc.hpp  terminal.hpp  terminal.tpp  terminal_helpers.hpp  utils.hpp
libs/SFML/: CMakeLists.txt
libs/ffmpeg/: CMakeLists.txt  lib.7z
libs/sfml/: CMakeLists.txt
libs/tinyfiledialogs/: CMakeLists.txt
libs/uvw/: CMakeLists.txt
logbog/: logbog-uge33.md  logbog-uge34.md  logbog-uge35.md  logbog-uge37.md
